        Added:
            - File renaming
            - Definitions
        Changed:
            - Mouse input processing function
        Removed:
        Fixed:

        Subversion 1.0.2.5 - 17.10.2021 @ 737464
            Added:
                - new file name change confirm method
            Changed:
            Removed:
            Fixed:

    Subversion 1.0.3 - 18.10.2021 @ 737464
        Added:
            - Definition
        Changed:
        Removed:
        Fixed:
            - renaming bug

    Subversion 1.0.4 - 18.10.2021 @ 737464
        Added:
            - Coding feature
        Changed:
            - Info
        Removed:
        Fixed:

        Subversion 1.0.4.5 - 18.10.2021 @ 737464
            Added:
                - Coding features
            Changed:
                - LF function
            Removed:
            Fixed:

    Subversion 1.0.5 - 18.10.2021 @ 737464
        Added:
            - Coding features
        Changed:
            - function "void check()"
        Removed:
        Fixed:
            - Coding feature bugs

    Subversion 1.0.6 - 19.10.2021 @ 737464
        Added:
        Changed:
            - line displaying
            - cursor movement
        Removed:
        Fixed:

        Subversion 1.0.6.5 - 19.10.2021 @ 737464
            Added:
            Changed:
            Removed:
            Fixed:
                - Cursor position (coding)

    Subversion 1.0.7 - 19.10.1021 @ 737464
        Added:
            - error function
        Changed:
        Removed:
        Fixed:

        Subversion 1.0.7.5 - 19.10.2021 @ 737464
            Added:
            Changed:
            Removed:
            Fixed:
                - out_of_range bug

    Subversion 1.0.8 - 20.10.2021 @ 737464
        Added:
            - Coding features
            - Definitions
            - Information
            - Empty file name preventer
        Changed:
            - Character adding function
        Removed:
        Fixed: